<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, OverviewActivity!</string>
    <string name="app_name">SMS Alarm</string>
    <string name="add_alarm_group">Alarmgruppe hinzufügen</string>
    <string name="alarm_group_name">Name</string>
    <string name="alarm_keyword_">Alarmwort</string>
    <string name="allowed_numbers">Erlaubte Absendernummer(n)</string>
    <string name="how_to_acknowledge_alarm">Zum Quittieren des Alarms die Menütaste betätigen und &quot;Alarm quittieren&quot; auswählen</string>
    <string name="acknowlegde_alarm">Alarm quittieren</string>
    <string name="select_alarm_tone">Alarmton auswählen</string>
    <string name="vibrate_for_alarm">Bei Alarm vibrieren</string>
    <string name="add_allowed_number">Erlaubten Absender hinzufügen</string>
    <string name="menu_save">Speichern</string>
    <string name="menu_cancel">Abbrechen</string>
    <string name="remove_allowed_number">Erlaubten absender entfernen</string>
    <string name="exit_without_saving">Wirklich ohne zu speichern beenden?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="alarm_groups">Alarmgruppen</string>
    <string name="choose_color">Farbe wählen</string>
    <string name="ringtone">Rufton</string>
    <string name="no_ringtone_chosen">Kein Alarmton ausgewählt</string>
    <string name="add">Hinzufügen</string>
    <string name="message_alarm_group_saved">Alarmgruppe gespeichert</string>
    <string name="message_alarm_group_deleted">Alarmgruppe gelöscht</string>
    <string name="message_sender_deleted">Absender gelöscht</string>
    <string name="response_number">Antwortnummer</string>
    <string name="answer_to_sender">An Absender antworten</string>
    <string name="add_answer">Antwort hinzufügen</string>
</resources>
