<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/alarm_group_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/alarmGroupNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView2"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/alarmGroupNameField"
        android:text="@string/alarm_keyword_"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/alarmKeywordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarmGroupNameField"
        android:layout_toRightOf="@id/textView2"
        android:ems="10" />

    <Button
        android:id="@+id/chooseColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/alarmKeywordField"
        android:text="@string/choose_color" />

    <CheckBox
        android:id="@+id/vibrateCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/chooseColorButton"
        android:text="@string/vibrate_for_alarm" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/vibrateCheckBox"
        android:text="@string/ringtone"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ringtoneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/textView3"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceMedium" android:layout_marginLeft="10dp"/>

    <Button
        android:id="@+id/chooseRingtoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:text="@string/select_alarm_tone" />

    <ImageView
        android:id="@+id/colorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/chooseColorButton"
        android:layout_toRightOf="@+id/chooseColorButton"
        android:src="@drawable/icon" android:layout_alignBottom="@id/chooseColorButton" android:minHeight="15dp" android:minWidth="30dp"/>

</RelativeLayout>