<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:layout_alignParentLeft="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/alarm_group_name" android:layout_marginRight="8dp" android:layout_marginBottom="2dp" android:layout_marginTop="2dp"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_below="@+id/textView1" android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_alignLeft="@+id/textView1" android:text="@string/alarm_keyword_" android:layout_marginBottom="2dp" android:layout_marginRight="8dp" android:layout_marginTop="2dp"></TextView>
        <TextView android:layout_height="wrap_content" android:layout_below="@+id/textView2" android:layout_width="wrap_content" android:id="@+id/textView3" android:text="@string/allowed_numbers"></TextView>
        <ListView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@+id/textView3" android:layout_alignLeft="@+id/textView3" android:id="@+id/AllowedNumbersListView"></ListView>
        <TextView android:layout_toRightOf="@+id/textView2" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:layout_alignTop="@+id/textView2" android:layout_alignBottom="@+id/textView2" android:id="@+id/alarmKeywordTextView"></TextView>
        <TextView android:layout_toRightOf="@+id/textView1" android:layout_height="wrap_content" android:text="TextView" android:layout_width="wrap_content" android:layout_alignTop="@+id/textView1" android:layout_alignBottom="@+id/textView1" android:id="@+id/AlarmGroupNameTextView" android:layout_alignLeft="@+id/alarmKeywordTextView"></TextView>
    </RelativeLayout>
