<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/response_number"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/responeNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10" android:layout_alignBaseline="@id/textView1" android:layout_toRightOf="@id/textView1">

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/answerToSenderCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="@string/answer_to_sender" />

    <EditText
        android:id="@+id/meaningEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:ems="10" />

    <EditText
        android:id="@+id/prefixEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:ems="10" android:layout_toRightOf="@id/meaningEditText"/>

    <Button
        android:id="@+id/addChoiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/meaningEditText"
        android:layout_alignParentLeft="true"
        android:text="@string/add_answer" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addChoiceButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/answerToSenderCheckBox" >

    </ListView>

</RelativeLayout>